test/errors/error18.base
Redefinition of symbol 'a'. Previously defined at line 8, columns 9-12
fun bar() {
   val a = 0;
       ^
